--- a/styles.css
+++ b/styles.css
@@ -81,15 +81,28 @@ input[type="email"], input[type="password"] {
 /* Style the login button */
 button[type="submit"] {
     width: 100%;
-    background-color: #397fce; /* Green background */
+    background-color: #397fce; 
     color: white;
-    padding: 14px 20px;
+    padding: 5px 5px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer; /* Change cursor to pointer on hover */
 }
-
+button[id = "add-contact"] {
+    width: 70%;
+    background-color: #397fce; 
+    color: white;
+    padding: 14px 20px;
+    margin-left: 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer; /* Change cursor to pointer on hover */
+}
+#filters {
+    display: flex;
+    justify-content: center; 
+}
 /* footer */
 footer {
     background: white;
