--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ main {
     margin-top: 20px;
     align-items: center;
     justify-content: center;
+    border-left: 5px solid #161a1f;
 }
 /* ====== GRID LAYOUT ====== */
 .container {
@@ -66,7 +67,12 @@ main {
 footer {
     grid-area: footer;
 }
-
+aside {
+    background: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
+}
 /* Style the input fields (username/password) */
 input[type="email"], input[type="password"] {
     width: 100%;
@@ -89,12 +95,12 @@ button[type="submit"] {
     border-radius: 4px;
     cursor: pointer; /* Change cursor to pointer on hover */
 }
-button[id = "add-contact"] {
+button[id = "add-contact"], button[id = "switch"], button[id = "assign"]{
     width: 70%;
     background-color: #397fce; 
     color: white;
     padding: 14px 20px;
-    margin-left: 20px;
+    margin-left: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer; /* Change cursor to pointer on hover */
@@ -102,6 +108,11 @@ button[id = "add-contact"] {
 #filters {
     display: flex;
     justify-content: center; 
+}
+#actions {
+    display: flex;
+    justify-content: center; 
+    margin-right: 20px;
 }
 /* footer */
 footer {
